# profile.mobile.apps.native.settings

./: 210.org.tizen.setting.patch.sh  CMakeLists.txt  Doxyfile  LICENSE.Flora  NOTICE  com.samsung.setting.desktop.in  doxygen.conf  dxml.sh  gdbinfo.txt  list.txt  manifest.xsd  mime.setting.xml  org.tizen.setting-about.xml.in  org.tizen.setting-display.xml.in  org.tizen.setting.efl  org.tizen.setting.manifest  org.tizen.setting.xml  org.tizen.setting.xml.in  org.tizen.setting.xml.ref  org.tizen.setting.xml.ref.in  project.config  sample.xml  setting.dox  settings.manifest  tags  xml.xsd
resource/po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  mn_MN.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  (+12 more)
setting-about/: CMakeLists.txt  org.tizen.setting-about.xml.in  setting-about.dox
setting-about/include/: setting-about-controller.h  setting-about-main.h  setting-about.h
setting-about/src/: setting-about-controller.c  setting-about-main.c  setting-about.c
setting-accessibility/: CMakeLists.txt  org.tizen.setting-accessibility.xml.in  setting-accessibility-main.c  setting-accessibility-screen-reader-settings.c  setting-accessibility-screen-reader-settings.h  setting-accessibility-screen-reader.c  setting-accessibility-screen-reader.h  setting-accessibility.c  setting-accessibility.h
setting-accessibility/include/: setting-accessibility-main.h  setting-accessibility-screen-reader-settings.h  setting-accessibility-screen-reader.h  setting-accessibility.h
setting-accessibility/src/: setting-accessibility-main.c  setting-accessibility-screen-reader-settings.c  setting-accessibility-screen-reader.c  setting-accessibility.c
setting-applications/: CMakeLists.txt  org.tizen.setting-applications.xml.in
setting-applications/include/: setting-applications-default-app.h  setting-applications-defaultapp.h  setting-applications-main.h  setting-applications.h
setting-applications/src/: setting-applications-defaultapp.c  setting-applications-main.c  setting-applications.c
setting-appmgr/: CMakeLists.txt  org.tizen.setting-appmgr.xml.in  setting-appmgr.dox
setting-appmgr/include/: setting-appmgr-async-worker.h  setting-appmgr-main.h  setting-appmgr-pkginfo-utils.h  setting-appmgr-pkginfo.h  setting-appmgr-runinfo.h  setting-appmgr-string.h  setting-appmgr-utils.h  setting-appmgr.h
setting-appmgr/src/: setting-appmgr-async-worker.c  setting-appmgr-main.c  setting-appmgr-pkginfo-utils.c  setting-appmgr-pkginfo.c  setting-appmgr-runinfo.c  setting-appmgr-utils.c  setting-appmgr.c
setting-common/: CMakeLists.txt  setting-common.dox
setting-common/include/: setting-cfg.h  setting-common-alarmmgr.h  setting-common-data-edj-define.h  setting-common-data-error.h  setting-common-data-slp-setting.h  setting-common-data-type.h  setting-common-draw-widget.h  setting-common-general-func.h  setting-common-init.h  setting-common-resource.h  setting-common-search.h  setting-common-sound.h  setting-common-string.h  setting-common-view.h
setting-common/src/: setting-cfg.c  setting-common-alarmmgr.c  setting-common-data-slp-setting.c  setting-common-draw-genlist.c  setting-common-draw-naviframe.c  setting-common-draw-popup.c  setting-common-draw-searchbar.c  setting-common-draw-widget.c  setting-common-general-func.c  setting-common-init.c  setting-common-resource.c  setting-common-search.c  setting-common-sound.c  setting-common-view.c
setting-connectivity/: CMakeLists.txt  org.tizen.setting-connectivity.xml.in
setting-connectivity/include/: setting-connectivity-usb-help.h  setting-connectivity-usb.h  setting-connectivity.h
setting-connectivity/src/: setting-connectivity-usb-help.c  setting-connectivity-usb.c  setting-connectivity.c
setting-display/: CMakeLists.txt  org.tizen.setting-display.xml.in  setting-display.dox
setting-display/include/: setting-display-backlight.h  setting-display-brightness.h  setting-display-main.h  setting-display-screen-mode.h  setting-display-wallpaper.h  setting-display.h
setting-display/src/: setting-display-backlight.c  setting-display-brightness.c  setting-display-main.c  setting-display-screen-mode.c  setting-display-wallpaper.c  setting-display.c
setting-fileview/: CMakeLists.txt  org.tizen.setting-fileview.xml.in
setting-fileview/include/: setting-fileview-main.h  setting-fileview.h
setting-fileview/src/: setting-fileview-main.c  setting-fileview.c
setting-flightmode/: CMakeLists.txt  org.tizen.setting-flightmode.xml.in
setting-flightmode/include/: setting-flightmode-main.h  setting-flightmode.h
setting-flightmode/src/: setting-flightmode-main.c  setting-flightmode.c
setting-font/: CMakeLists.txt  org.tizen.setting-font.xml.in
setting-locktype/: CMakeLists.txt  org.tizen.setting-locktype.xml.in
setting-memory/: CMakeLists.txt
setting-moreconnections/: CMakeLists.txt  org.tizen.setting-moreconnections.xml.in
setting-network/: CMakeLists.txt  org.tizen.setting-network.xml.in
setting-password/: CMakeLists.txt  org.tizen.setting-password.xml.in  setting-password.dox
setting-phone/: CMakeLists.txt  org.tizen.setting-phone.xml.in
setting-powersaving/: CMakeLists.txt
setting-profile/: CMakeLists.txt  org.tizen.setting-profile.xml.in
setting-reset/: CMakeLists.txt
setting-ringtone/: CMakeLists.txt  org.tizen.setting-ringtone.xml.in
setting-security/: CMakeLists.txt  org.tizen.setting-security.xml.in  setting-security.dox
setting-storage/: CMakeLists.txt  cscope.files  cscope.out  org.tizen.setting-storage.xml.in  setting-storage.dox
setting-syspopup/: CMakeLists.txt
setting-syspopup/src/: util.c  (+2 more)
setting-time/: CMakeLists.txt  org.tizen.setting-time.xml.in  setting-time.dox
setting-viewtype/: CMakeLists.txt
src/: CMakeLists.txt  setting-common-internal.pc  setting-common-internal.pc.in  setting-handler.c  setting-helper.c  setting-main.c  setting-more-menu.c  setting-plugin.c  setting.c
(+308 files in other folders)
