INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/${SETTING_COMMON}/include)

FILE(GLOB ACC_SRCS *.c)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs_acc REQUIRED elementary ui-gadget-1 capi-appfw-application
        evas dlog edje glib-2.0 appcore-efl eina appsvc capi-appfw-app-manager
        vconf app2sd json-glib-1.0 efl-extension)

FOREACH(flag ${pkgs_acc_CFLAGS})
    SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -fPIC")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")

IF("${ARCH}" STREQUAL "arm")
        ADD_DEFINITIONS("-DTARGET")
        MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")

ADD_LIBRARY(${SETTING_ACCESSIBILITY_UG} SHARED ${ACC_SRCS})
TARGET_LINK_LIBRARIES(${SETTING_ACCESSIBILITY_UG} ${LIB_SETTING_COMMON})
TARGET_LINK_LIBRARIES(${SETTING_ACCESSIBILITY_UG} ${pkgs_appmgr_LDFLAGS})

INSTALL(TARGETS ${SETTING_ACCESSIBILITY_UG} DESTINATION ${PREFIX}/lib/ug)
