CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/${SETTING_COMMON}/include)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs_fileview REQUIRED
	elementary appcore-common appcore-efl ui-gadget-1 capi-appfw-application evas ecore ewebkit2)


FOREACH(flag ${pkgs_fileview_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -fPIC")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_LDFLAGS "-Wl,-z,nodelete")

IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DSLP_DEBUG")
ADD_DEFINITIONS("-shared")

SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -Wl,--rpath=/usr/lib")

ADD_LIBRARY(${SETTING_FILEVIEW_UG} SHARED
	src/setting-fileview.c
	src/setting-fileview-main.c
)

TARGET_LINK_LIBRARIES(${SETTING_FILEVIEW_UG} -L${CMAKE_BINARY_DIR}/${SETTING_COMMON}/ -lsetting-common)
TARGET_LINK_LIBRARIES(${SETTING_FILEVIEW_UG} ${CMAKE_LDFLAGS} ${pkgs_fileview_LDFLAGS})

INSTALL(TARGETS ${SETTING_FILEVIEW_UG} DESTINATION ${PREFIX}/lib/ug)
